--- a/cluster/core/kube-system/local-path-provisioner/kustomization.yaml
+++ b/cluster/core/kube-system/local-path-provisioner/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - snapshot-controller
-  - local-path-provisioner
+  - override-config.yaml
+  - remove-default-class.yaml
