为kasten添加腾讯云cos作为云存储，提供异地备份功能

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -14,14 +14,16 @@ stringData:
   SECRET_KASTEN_AUTH: ENC[AES256_GCM,data:9Uy909neSOm5uaHLSn8clcxWybbPnolKD5g/agPbkMrHhZj6EjM3D6q8,iv:XMlV9891twdyIfZuQjvVkZjcx/oajWWeucKhXRXkYgg=,tag:Z1DyZLlPBbUHABtVrO1b4Q==,type:str]
   SECRET_KASTEN_EULA_COMPANY: ENC[AES256_GCM,data:36XI2A==,iv:CuekajuiS+v8VnKPNoMZvGmYORQdBy1fbRjvs+o0XUU=,tag:RxeBYFnmjXBr+bYLUnwLng==,type:str]
   SECRET_KASTEN_EULA_EMAIL: ENC[AES256_GCM,data:2SBHazgM2DKksgGDJAKauzWnpIIfve4BL62L,iv:ZU41ZWjrh2lRGjgf8bg7ovA9Uh/YRAKNV0Q5BeWO0dE=,tag:N6hWNkDW+fBCpbr7AxkVAA==,type:str]
+  SECRET_KASTEN_S3_BUCKET_NAME: ENC[AES256_GCM,data:Wp1PMHxe4/MzRChSrao=,iv:4bLq8CBLnfKggZcerNAiDx0fvDAHvHyuru5fTsJQ+1s=,tag:xzhdkkcMcPEKbcVHZETFiw==,type:str]
+  SECRET_KASTEN_S3_ENDPOINT: ENC[AES256_GCM,data:FFWjNxlpRXHgVmylQ0uOYYMERCOqm9rTcFJU+2Y=,iv:PJJL5Okz18UpKQkBoGe9YHrWiJJNS40K4+OeXYh+DNY=,tag:62eKVLBquJjaoCJ6bUia8w==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2021-08-20T14:47:15Z"
-  mac: ENC[AES256_GCM,data:cPqr1HlH3bXt3rzeyP5E/g79xaSXkDGubsCH43G/VYQh4Ajc/Rf7xUP8UUTUzp+Sx15dEsBKTotYNmn3WbU6aL2BrOsNmjSTydnBfuYzY2ObUW0uojvBJPTDUaFOO51tYEcPHiN6GSFlNvfHU4vHXzmz9by8PBsf4shniDMpnPA=,iv:i342+V7DZXmKX9F3tp4OadUlxiuS1+0jjWMoTIwbu6c=,tag:N1IE3vsurIvFX2bl6Nlt/Q==,type:str]
+  lastmodified: "2021-08-31T21:16:24Z"
+  mac: ENC[AES256_GCM,data:j6dGPB0uuWr7W3CVx/yixhcwldhmNHIuTMCe52hnQPpwBXfos0EaHrH3NcTHEWm1u6Z68Tt/AnRwFZLIAIah0LlzwyFBTdoOTLCB0YutywJTVMn+mavM8xmLWFpT9hB+lky6SxZMXwDWpGDLQxkCOKVj1mUCdm9lVIGj0Wyyc+w=,iv:nb7mgfSdWPQlc+d7yjRRL31Rs++x9ZiSC7B/7Z4ff7c=,tag:HiPpTGbTo3vg8b9hexC/iA==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
