--- a/cluster/apps/cluster-manage/kasten/profiles/kustomization.yaml
+++ b/cluster/apps/cluster-manage/kasten/profiles/kustomization.yaml
@@ -1,5 +1,6 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
-  - profiles
+  - secret.sops.yaml
+  - tencentcloud.yaml
