修正两个旧的测试用yaml中的存储类，并调低pvc要求容量

--- a/tests/test-ceph-block.yaml
+++ b/tests/test-ceph-block.yaml
@@ -13,12 +13,12 @@ metadata:
   labels:
     app: test
 spec:
-  storageClassName: ceph-block-l2
+  storageClassName: ceph-block-hdd-r1
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 100Gi
+      storage: 10Gi
 
 ---
 apiVersion: v1
