--- a/tests/test-ceph-fs.yaml
+++ b/tests/test-ceph-fs.yaml
@@ -15,8 +15,8 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 1Pi
-  storageClassName: ceph-fs-l1
+      storage: 10Gi
+  storageClassName: ceph-fs-hdd-r1
 
 ---
 apiVersion: v1
