--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,9 +1,12 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kube-system
+  - 3d-print
   - cluster-manage
-  - monitoring
   - coding
-  - home
+  - home-automation
+  - kube-system
+  - monitoring
+  - nas
   - virtual-machine
