将文件管理、分享相关应用的类型名称从nas调整为file-service

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -4,9 +4,9 @@ kind: Kustomization
 resources:
   - 3d-print
   - cluster-manage
+  - file-service
   - home-automation
   - kube-system
   - monitoring
-  - nas
   - programming
   - virtual-machine
