将metrics-server相关配置移至core中，并删除apps里的kube-system目录

--- a/cluster/core/kube-system/kustomization.yaml
+++ b/cluster/core/kube-system/kustomization.yaml
@@ -1,6 +1,8 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - snapshot-controller
   - local-path-provisioner
+  - metrics-server
+  - snapshot-controller
   - traefik
