--- a/cluster/apps/3d-print/octoprint/data-pvc.yaml
+++ b/cluster/apps/3d-print/octoprint/data-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: octoprint-data
-  namespace: home
+  namespace: 3d-print
 spec:
   accessModes:
     - ReadWriteOnce
