--- a/cluster/apps/file-service/pvcs/ceph-fs-test.yaml
+++ b/cluster/apps/file-service/pvcs/ceph-fs-test.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nas-test-l1-pvc
+  name: ceph-fs-test
   namespace: home
 spec:
   accessModes:
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 1Pi
-  storageClassName: ceph-fs-l1
+  storageClassName: ceph-fs-hdd-r1
