--- a/cluster/apps/file-service/samba/helm-release.yaml
+++ b/cluster/apps/file-service/samba/helm-release.yaml
@@ -21,16 +21,10 @@ spec:
         type: LoadBalancer
         externalTrafficPolicy: Local
     env:
-      SHARE1: nas-test-l1;/share/nas-test-l1;yes;no;yes
-      SHARE2: nas-test-l2;/share/nas-test-l2;yes;no;yes
+      SHARE1: ceph-fs-test;/share/ceph-fs-test;yes;no;yes
     persistence:
-      nas-test-l1:
+      ceph-fs-test:
         enabled: true
         type: pvc
-        existingClaim: nas-test-l1-pvc
-        mountPath: /share/nas-test-l1
-      nas-test-l2:
-        enabled: true
-        type: pvc
-        existingClaim: nas-test-l2-pvc
-        mountPath: /share/nas-test-l2
+        existingClaim: ceph-fs-test
+        mountPath: /share/ceph-fs-test
