--- a/cluster/apps/file-service/pvcs/ceph-fs-test.yaml
+++ b/cluster/apps/file-service/pvcs/ceph-fs-test.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ceph-fs-test
-  namespace: home
+  namespace: file-service
 spec:
   accessModes:
     - ReadWriteMany
