调整拆分后智能家居相关应用的命名空间

--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - cert-manager.yaml
   - file-service.yaml
   - gitlab.yaml
-  - home.yaml
+  - home-automation.yaml
   - kasten.yaml
   - media.yaml
   - metallb-system.yaml
