添加一块SanDisk SSDPlus 240G SSD到ceph，并单盘创建两个osd以最大化利用性能

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -63,6 +63,11 @@ spec:
                   deviceClass: "ssd"
                   osdsPerDevice: "2"
 
+              - name: "/dev/disk/by-id/scsi-SATA_SanDisk_SDSSDA24_173130448503"
+                config:
+                  deviceClass: "ssd"
+                  osdsPerDevice: "2"
+
               - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD71JSA"
                 config:
                   deviceClass: "hdd"
