--- a/cluster/apps/file-service/pvcs/kustomization.yaml
+++ b/cluster/apps/file-service/pvcs/kustomization.yaml
@@ -2,5 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - nas-test-l1.yaml
-  - nas-test-l2.yaml
+  - ceph-fs-test.yaml
