--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - 3d-print.yaml
   - cattle-system.yaml
   - cert-manager.yaml
+  - file-service.yaml
   - gitlab.yaml
   - home-automation.yaml
   - kasten.yaml
