为octoprint添加对arm64 cpu架构污点的容忍

--- a/cluster/apps/3d-print/octoprint/helm-release.yaml
+++ b/cluster/apps/3d-print/octoprint/helm-release.yaml
@@ -57,3 +57,8 @@ spec:
                   operator: In
                   values:
                     - "home-raspberry-pi4b"
+    tolerations:
+      - key: "kubernetes.io/arch"
+        operator: "Equal"
+        value: "arm64"
+        effect: "NoSchedule"
