添加用于迁移文件的临时存储pvc

--- a/cluster/apps/file-service/samba/helm-release.yaml
+++ b/cluster/apps/file-service/samba/helm-release.yaml
@@ -22,9 +22,16 @@ spec:
         externalTrafficPolicy: Local
     env:
       SHARE1: ceph-fs-test;/share/ceph-fs-test;yes;no;yes
+      SHARE2: unraid-tmp;/share/unraid-tmp;yes;no;yes
     persistence:
       ceph-fs-test:
         enabled: true
         type: pvc
         existingClaim: ceph-fs-test
         mountPath: /share/ceph-fs-test
+
+      unraid-tmp:
+        enabled: true
+        type: pvc
+        existingClaim: unraid-tmp
+        mountPath: /share/unraid-tmp
