--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -99,6 +99,16 @@ spec:
                 config:
                   deviceClass: "hdd"
 
+          - name: "home-edge-gateway"
+            devices:
+              - name: "sda"
+                config:
+                  deviceClass: "hdd"
+
+              - name: "sdb"
+                config:
+                  deviceClass: "hdd"
+
     ingress:
       dashboard:
         annotations:
