--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -36,15 +36,20 @@ spec:
         # 允许在同一个节点上运行多个mon
         allowMultiplePerNode: true
 
-      # 将所有ceph集群服务设置为必须在有ceph角色的节点上运行
       placement:
         all:
+          # 将所有ceph服务设置为必须在有ceph角色的节点上运行
           nodeAffinity:
             requiredDuringSchedulingIgnoredDuringExecution:
               nodeSelectorTerms:
                 - matchExpressions:
                     - key: node-role.kubernetes.io/ceph
                       operator: Exists
+        osd:
+          # 让osd能容忍gateway污点
+          tolerations:
+            - key: gateway
+              operator: Exists
 
       # 资源限制
       resources:
