--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -27,6 +27,12 @@ spec:
       osd_pool_default_min_size = 1
       [mon]
       mon_warn_on_pool_no_redundancy = false
+      [osd]
+      osd_max_backfills = 30
+      osd_backfill_scan_min = 256
+      osd_backfill_scan_max = 1024
+      osd_recovery_max_active_hdd = 5
+      osd_recovery_max_single_start = 5
 
     toolbox:
       enabled: true
