--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -122,6 +122,10 @@ spec:
                 config:
                   deviceClass: "hdd"
 
+              - name: "/dev/disk/by-id/scsi-SATA_ST6000NM0115-1YZ_ZAD6XBFD"
+                config:
+                  deviceClass: "hdd"
+
               - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0NC8L"
                 config:
                   deviceClass: "hdd"
