--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -126,6 +126,10 @@ spec:
                 config:
                   deviceClass: "hdd"
 
+              - name: "/dev/disk/by-id/ata-ST6000NM0115-1YZ110_ZAD463ZF"
+                config:
+                  deviceClass: "hdd"
+
               - name: "/dev/disk/by-id/ata-ST8000NM000A-2KE101_WRD0NC8L"
                 config:
                   deviceClass: "hdd"
