--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -29,11 +29,14 @@ spec:
       mon_warn_on_pool_no_redundancy = false
       [osd]
       osd_max_scrubs = 5
-      osd_max_backfills = 30
+      osd_max_backfills = 1000
       osd_backfill_scan_min = 300
       osd_backfill_scan_max = 500
-      osd_recovery_max_active_hdd = 5
-      osd_recovery_max_single_start = 5
+      osd_backfill_retry_interval = 0
+      osd_recovery_sleep_hdd = 0
+      osd_recovery_max_active_hdd = 1000
+      osd_recovery_max_single_start = 1000
+      osd_recovery_max_chunk = 268435456
 
     toolbox:
       enabled: true
