进一步提高ceph backfill和recovery操作的速度
当前recovery峰值速度为109 MiB/s和402 objects/s，大部分时间速度处于80 MiB/s和350 objects/s以上，但被写入的新盘偶尔出现一两个slow ops，应该已经达到极限了。

注：
osd_recovery_max_active_hdd和osd_recovery_max_single_start调高能显著提升速度；
pg多的情况下osd_max_backfills调高可以提高backfill操作并发数，也能显著提升速度；
osd_backfill_retry_interval和osd_recovery_sleep_hdd设为0取消操作间隔，略微提升速度；
osd_recovery_max_chunk调到最大256MiB，显著提升速度；

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -30,11 +30,14 @@ spec:
       [osd]
       osd_max_scrubs = 5
       osd_scrub_during_recovery = true
-      osd_max_backfills = 30
+      osd_max_backfills = 1000
       osd_backfill_scan_min = 300
       osd_backfill_scan_max = 500
-      osd_recovery_max_active_hdd = 5
-      osd_recovery_max_single_start = 5
+      osd_backfill_retry_interval = 0
+      osd_recovery_sleep_hdd = 0
+      osd_recovery_max_active_hdd = 1000
+      osd_recovery_max_single_start = 1000
+      osd_recovery_max_chunk = 268435456
 
     toolbox:
       enabled: true
