尝试将osd pod的健康检测第一次检测时间推迟到240秒之后（默认为pod启动45秒后），以确保osd能正常启动而不是还在加载过程中就被k8s杀死

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -151,6 +151,12 @@ spec:
                 config:
                   deviceClass: "hdd"
 
+      healthCheck:
+        livenessProbe:
+          osd:
+            probe:
+              initialDelaySeconds: 240
+
     ingress:
       dashboard:
         annotations:
