修改rook的ceph集群设置，在pg状态非完全健康的情况下也允许升级（重启pod）

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -43,6 +43,9 @@ spec:
       enabled: true
 
     cephClusterSpec:
+      # 在pg状态非完全健康的情况下也允许升级OSD
+      continueUpgradeAfterChecksEvenIfNotHealthy: true
+
       mon:
         # 允许在同一个节点上运行多个mon
         allowMultiplePerNode: true
