--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -16,14 +16,16 @@ stringData:
   SECRET_KASTEN_EULA_EMAIL: ENC[AES256_GCM,data:2SBHazgM2DKksgGDJAKauzWnpIIfve4BL62L,iv:ZU41ZWjrh2lRGjgf8bg7ovA9Uh/YRAKNV0Q5BeWO0dE=,tag:N6hWNkDW+fBCpbr7AxkVAA==,type:str]
   SECRET_KASTEN_S3_BUCKET_NAME: ENC[AES256_GCM,data:Wp1PMHxe4/MzRChSrao=,iv:4bLq8CBLnfKggZcerNAiDx0fvDAHvHyuru5fTsJQ+1s=,tag:xzhdkkcMcPEKbcVHZETFiw==,type:str]
   SECRET_KASTEN_S3_ENDPOINT: ENC[AES256_GCM,data:FFWjNxlpRXHgVmylQ0uOYYMERCOqm9rTcFJU+2Y=,iv:PJJL5Okz18UpKQkBoGe9YHrWiJJNS40K4+OeXYh+DNY=,tag:62eKVLBquJjaoCJ6bUia8w==,type:str]
+  SECRET_NEXTCLOUD_USERNAME: ENC[AES256_GCM,data:jNffPA==,iv:CTtIQ26pVXz1sdE8OjTQ1XKBn0+ux2FUKKdQUSs8gsE=,tag:wHOaOxkb4/zIWG0jBCZS5w==,type:str]
+  SECRET_NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:i5rJK0A6UA/nTnFXd8iGuZTwViR68MfjeIkqzU8sM+w=,iv:sqh0i/Cyyi2KHW9fZRtKLIinGCqBq5exVHRyTEYOr2U=,tag:HgGTZVzwK3z2ol25xTk4BQ==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2021-08-31T21:16:24Z"
-  mac: ENC[AES256_GCM,data:j6dGPB0uuWr7W3CVx/yixhcwldhmNHIuTMCe52hnQPpwBXfos0EaHrH3NcTHEWm1u6Z68Tt/AnRwFZLIAIah0LlzwyFBTdoOTLCB0YutywJTVMn+mavM8xmLWFpT9hB+lky6SxZMXwDWpGDLQxkCOKVj1mUCdm9lVIGj0Wyyc+w=,iv:nb7mgfSdWPQlc+d7yjRRL31Rs++x9ZiSC7B/7Z4ff7c=,tag:HiPpTGbTo3vg8b9hexC/iA==,type:str]
+  lastmodified: "2021-09-28T17:42:05Z"
+  mac: ENC[AES256_GCM,data:Hf4YJhlVIo7rSZo2Ssr87sZ7ciWXvXJ2rpnBNJtB/9WNDxBZsHy51lU3dcQ4I+21jMhLUXQA3qfh1FJODDpcBrGewuR4XAuaeNNpGoWSdcA9fSl0eIOC7jxCH8DEp5NLSJi328zQ3ywaALXvfPsS5D8DRdF9sHUw5kdx/idJZOQ=,iv:U8Sc7Xzv1G6ZS3SlRwirLCqm8V/hSkzPIpOk40rvi/I=,tag:+WMvUtEgS/Lxo56G27+myQ==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
