--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -34,6 +34,12 @@ spec:
           secretName: nextcloud-tls
     nextcloud:
       host: "nextcloud.${SECRET_DOMAIN}"
+      configs:
+        custom.config.php: |-
+          <?php
+          $CONFIG = array (
+            'overwriteprotocol' => 'https',
+          );
     persistence:
       enabled: true
       accessMode: ReadWriteOnce
