--- a/cluster/core/rook-ceph/helm-ceph-operator.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-operator.yaml
@@ -15,3 +15,10 @@ spec:
         kind: HelmRepository
         name: rook-ceph-charts
         namespace: flux-system
+  values:
+    csi:
+      pluginTolerations:
+        - key: cloud
+          operator: Exists
+        - key: kubernetes.io/arch
+          operator: Exists
