--- a/cluster/core/rook-ceph/helm-ceph-operator.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-operator.yaml
@@ -22,3 +22,6 @@ spec:
           operator: Exists
         - key: kubernetes.io/arch
           operator: Exists
+      provisionerTolerations:
+        - key: kubernetes.io/arch
+          operator: Exists
