--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -275,4 +275,35 @@ spec:
             csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
             csi.storage.k8s.io/fstype: ext4
 
+      - name: fs-hdd-ec
+        spec:
+          metadataPool:
+            failureDomain: osd
+            replicated:
+              size: 3  # 副本数，多副本确保元数据可靠性
+            deviceClass: ssd  # 设置后端osd类型，使用ssd加速metadata读写和响应速度
+          dataPools:
+            - failureDomain: osd
+              erasureCoded:
+                dataChunks: 4
+                codingChunks: 2
+              deviceClass: hdd  # 设置后端osd类型
+          metadataServer:
+            # 默认设置不用动
+            activeCount: 1
+            activeStandby: true
+        storageClass:
+          enabled: true
+          name: ceph-fs-hdd-ec  # 存储类名称
+          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
+          parameters:
+            # 默认设置不用动
+            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
+            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
+            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
+            csi.storage.k8s.io/fstype: ext4
+
     cephObjectStores: [ ]
