--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - 3d-print.yaml
+  - bitwarden.yaml
   - cattle-system.yaml
   - cert-manager.yaml
   - entertainment.yaml
