--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - gitlab.yaml
   - home-automation.yaml
   - kasten.yaml
+  - kasten-io.yaml
   - metallb-system.yaml
   - monitoring.yaml
   - rook-ceph.yaml
