--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cert-manager
+#  - cert-manager
   #  - kasten
-  - kasten-test
-  - kube-system
-  - kubevirt
+  #  - kasten-test
+  #  - kube-system
+  #  - kubevirt
   - metallb-system
   - namespaces
   - rook-ceph
