恢复snapshot-controller的安装

--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
 #  - cert-manager
   #  - kasten
   #  - kasten-test
-  #  - kube-system
+  - kube-system
   #  - kubevirt
   - metallb-system
   - namespaces
