--- a/cluster/core/kube-system/kustomization.yaml
+++ b/cluster/core/kube-system/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-#  - local-path-provisioner
+  - local-path-provisioner
   - metrics-server
   - snapshot-controller
 #  - traefik
