移除cert-manager中没用的letsencrypt-staging issuer 将letsencrypt-production改名为更直观的letsencrypt-dns 将letsencrypt-http01改名为letsencrypt-http

--- a/cluster/core/cert-manager/helm-release.yaml
+++ b/cluster/core/cert-manager/helm-release.yaml
@@ -30,6 +30,6 @@ spec:
         - "1.1.1.1"
         - "8.8.8.8"
     ingressShim:
-      defaultIssuerName: "letsencrypt-http01"
+      defaultIssuerName: "letsencrypt-http"
       defaultIssuerKind: "ClusterIssuer"
       defaultIssuerGroup: "cert-manager.io"
