--- a/cluster/core/cert-manager/letsencrypt-dns.yaml
+++ b/cluster/core/cert-manager/letsencrypt-dns.yaml
@@ -2,13 +2,13 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-production
+  name: letsencrypt-dns
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: "${SECRET_LETS_ENCRYPT_EMAIL}"
     privateKeySecretRef:
-      name: letsencrypt-production
+      name: letsencrypt-dns
     solvers:
       - dns01:
           cloudflare:
