--- a/cluster/core/cert-manager/letsencrypt-http.yaml
+++ b/cluster/core/cert-manager/letsencrypt-http.yaml
@@ -2,12 +2,12 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-http01
+  name: letsencrypt-http
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
-      name: letsencrypt-http01
+      name: letsencrypt-http
     solvers:
       - http01:
           ingress:
