将rook-ceph的ingress设置为使用dns方式签发证书

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -147,6 +147,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: "traefik"
           kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: "letsencrypt-dns"
         host:
           name: "ceph.${SECRET_DOMAIN}"
         tls:
