将kasten安装的命名空间和名称改回官方默认的，以避免奇奇怪怪的问题

--- a/cluster/core/kasten/dr-secret.sops.yaml
+++ b/cluster/core/kasten/dr-secret.sops.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: k10-dr-secret
-  namespace: kasten
+  namespace: kasten-io
 type: Opaque
 stringData:
   key: ENC[AES256_GCM,data:+l8NEfbPDgxTPgkTtuqQFtHsupdtay1GrcZLNqvvg+J3oOvxZsT9WZmug5AlN9eb1e+DBQkoTa6WYiY0wh3lRg==,iv:DFp1S6W3fcAi+oHNz5E/iKFZmq4RVc6oX0J+lzhzpKQ=,tag:XjlAsYcb7X5VGDlsauRRGw==,type:str]
@@ -13,8 +13,8 @@ sops:
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2021-08-31T20:59:40Z"
-  mac: ENC[AES256_GCM,data:i9gdtLZp2u23AgwhogCsUwSssF7Z6tS3ZCHPpf5KYIHg6HUCSRKfr/R8u+SIlovTc6m1ValKlcmd2gKIGUOfjwWFh3oeRYz+UaRoiMuKeDFlfJ810pwfD6c8dM0WkqiD06+HJSn27GrtlIVGCrcV6iR89nxRqajJ0KQsVrzssBE=,iv:unn0P4V8pKKm0yuZjTqtlD/B5B00RkuIruZmXRVuP44=,tag:pXjDOeUlijBzTfHfGiq0cA==,type:str]
+  lastmodified: "2021-10-31T03:55:06Z"
+  mac: ENC[AES256_GCM,data:SF/2DyhMczs3nPGcBnNfoSxwZKpskEQQ/GndUpgytnpdjskYOU+zpYG23OKu7iEWPabCMUdFk2MpkSD4uvJI7rht7wWvRKJcm2f7ySswaviYk8aG5Ofque0u7oe7cM7zUfoKbJSNaiZwTn8vCJXT27nHlQUAJvMsKiV0SSSwrxY=,iv:DqiA4K85BFiBODa+BPKXDnlEiKRDlRLPL7nwuejncnI=,tag:yNxvtu6fwZOd3in1QL5qWg==,type:str]
   pgp:
     - created_at: "2021-08-31T19:34:43Z"
       enc: |
