--- a/cluster/core/kasten/profiles/secret.sops.yaml
+++ b/cluster/core/kasten/profiles/secret.sops.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: tencentcloud-secret
-  namespace: kasten
+  namespace: kasten-io
 type: secrets.kanister.io/aws
 stringData:
   aws_access_key_id: ENC[AES256_GCM,data:kE48WkZOj7FJf5e4PuSI/Sa2/jgGEIwWmZphrpBjTbVjpZCJ,iv:JMfziYUZpkGwvUKnKeLJC8Z4/cgrtmgabsOpCFpVQFc=,tag:50KXV+XaGrxMlR278F5h5A==,type:str]
@@ -14,8 +14,8 @@ sops:
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2021-08-31T21:07:35Z"
-  mac: ENC[AES256_GCM,data:asFX8Wgr+xOegORZv9eIIPcVy0475bgn4IBFs26Kjoik3QKWQV4rgR8Ig40XxwFZLtwxp4fk20p2oe8fKlif9S2Bs5kwYMG/8tBU5i2ZCOHzHGYYTXkgGxf0qPt0v7yZcRh7bFy4uTgspBmqCTnS5YLQWWGp/yuDjH2IbhuTq5w=,iv:uZpyHtCa7rKL5/yLtj2OGtsqWJ9xm/id79kupilIFEk=,tag:wd6bG40B1HQrHz0ThpmG1w==,type:str]
+  lastmodified: "2021-10-31T00:33:09Z"
+  mac: ENC[AES256_GCM,data:cPcm7FN3HPdAbGy//DfN2J157EODtOjCB85jkAn7dMZLtjyraR8Dg1UtUV+qe0vosFl2qb/dN76RtUgkCicUnUOWJyhpjrqM3CtRb11FmIu8q7PGHulBo2wU0qoWqzeLAYGjw4+sFsC2W2bCj2bNZRwUHDhhVmPnsBQNhHH063M=,iv:fCSox80xT+tkjYkEGGuaSUyKgkdETldGE7AiSiiLUms=,tag:HOG9oAGjCS67SJuw9pFE0w==,type:str]
   pgp:
     - created_at: "2021-08-31T19:23:08Z"
       enc: |
