--- a/cluster/core/kasten/helm-release.yaml
+++ b/cluster/core/kasten/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
       host: "kasten.${SECRET_DOMAIN}"
       annotations:
         kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
+        cert-manager.io/cluster-issuer: "letsencrypt-dns"
       urlPath: "kasten"
       hosts:
         - "kasten.${SECRET_DOMAIN}"
