修复traefik https访问时404的问题

--- a/cluster/core/kube-system/traefik/helm-release.yaml
+++ b/cluster/core/kube-system/traefik/helm-release.yaml
@@ -29,6 +29,8 @@ spec:
       websecure:
         expose: true
         hostPort: 443
+        tls:
+          enabled: true
       gitlab-ssh:
         port: 10000
         hostPort: 10000
