给traefik加上仅限内网IP和输入账号密码后才可访问的中间件，以提升各应用的安全性

--- a/cluster/core/kube-system/traefik/middlewares/kustomization.yaml
+++ b/cluster/core/kube-system/traefik/middlewares/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - application.yaml
-#  - file.yaml
-#  - core.yaml
+  - basic-auth.yaml
+  - basic-auth-secret.sops.yaml
+  - rfc-1918.yaml
