开启traefik dashboard的service映射

--- a/cluster/core/kube-system/traefik/helm-release.yaml
+++ b/cluster/core/kube-system/traefik/helm-release.yaml
@@ -22,6 +22,8 @@ spec:
       access:
         enabled: true
     ports:
+      traefik:
+        expose: true
       web:
         expose: true
         hostPort: 80
