--- a/cluster/core/kasten/helm-release.yaml
+++ b/cluster/core/kasten/helm-release.yaml
@@ -28,8 +28,10 @@ spec:
       create: true
       host: "kasten.${SECRET_DOMAIN}"
       annotations:
+        kubernetes.io/ingress.class: "traefik"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: "letsencrypt-dns"
+        traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
       urlPath: "kasten"
       hosts:
         - "kasten.${SECRET_DOMAIN}"
