给ceph的dashboard ingress添加上仅限内网IP访问的中间件

--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -148,6 +148,7 @@ spec:
           kubernetes.io/ingress.class: "traefik"
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: "letsencrypt-dns"
+          traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         host:
           name: "ceph.${SECRET_DOMAIN}"
         tls:
