显式设置traefik的日志等级

--- a/cluster/core/kube-system/traefik/helm-release.yaml
+++ b/cluster/core/kube-system/traefik/helm-release.yaml
@@ -19,6 +19,8 @@ spec:
     deployment:
       kind: DaemonSet
     logs:
+      general:
+        level: ERROR
       access:
         enabled: true
     ports:
