恢复kubevirt安装并更新到最新版

--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - cert-manager
   - kasten
   - kube-system
-  #  - kubevirt
+  - kubevirt
   - metallb-system
   - namespaces
   - rook-ceph
