--- a/cluster/core/kubevirt/kustomization.yaml
+++ b/cluster/core/kubevirt/kustomization.yaml
@@ -1,7 +1,9 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - https://github.com/kubevirt/kubevirt/releases/download/v0.44.1/kubevirt-operator.yaml
-  - https://github.com/kubevirt/kubevirt/releases/download/v0.44.1/kubevirt-cr.yaml
-  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.37.1/cdi-operator.yaml
-  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.37.1/cdi-cr.yaml
+  - https://github.com/kubevirt/kubevirt/releases/download/v0.46.1/kubevirt-operator.yaml
+  - https://github.com/kubevirt/kubevirt/releases/download/v0.46.1/kubevirt-cr.yaml
+  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.41.0/cdi-operator.yaml
+  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.41.0/cdi-cr.yaml
+  - override-kubevirt-config.yaml
