--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -1,9 +1,9 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-#resources:
-#  - 3d-print
-#  - cluster-manage
+resources:
+  #  - 3d-print
+  - cluster-manage
 #  - entertainment
 #  - file-service
 #  - home-automation
