调整rancher的ingress证书签发部分，改为直接使用cert-manager的外部issuer 给rancher的ingress添加上仅限内网IP访问的中间件

--- a/cluster/apps/cluster-manage/rancher/helm-release.yaml
+++ b/cluster/apps/cluster-manage/rancher/helm-release.yaml
@@ -19,7 +19,10 @@ spec:
     replicas: 1
     hostname: "rancher.${SECRET_DOMAIN}"
     ingress:
+      extraAnnotations:
+        kubernetes.io/ingress.class: "traefik"
+        kubernetes.io/tls-acme: "true"
+        cert-manager.io/cluster-issuer: "letsencrypt-dns"
+        traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
       tls:
-        source: letsEncrypt
-    letsEncrypt:
-      email: "${SECRET_LETS_ENCRYPT_EMAIL}"
+        source: secret
