--- a/cluster/core/kubevirt/kustomization.yaml
+++ b/cluster/core/kubevirt/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
   - https://github.com/kubevirt/kubevirt/releases/download/v0.46.1/kubevirt-cr.yaml
   - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.41.0/cdi-operator.yaml
   - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.41.0/cdi-cr.yaml
+patchesStrategicMerge:
   - override-kubevirt-config.yaml
