将home-assistant的ingress证书签发改为dns方式 给home-assistant的vscode ingress添加上仅限内网IP可访问的中间件

--- a/cluster/apps/home-automation/home-assistant/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/helm-release.yaml
@@ -31,7 +31,9 @@ spec:
               - path: /
                 pathType: Prefix
         annotations:
+          kubernetes.io/ingress.class: "traefik"
           kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: "letsencrypt-dns"
         tls:
           - hosts:
               - "hass.${SECRET_DOMAIN}"
@@ -58,7 +60,10 @@ spec:
         ingress:
           enabled: true
           annotations:
+            kubernetes.io/ingress.class: "traefik"
             kubernetes.io/tls-acme: "true"
+            cert-manager.io/cluster-issuer: "letsencrypt-dns"
+            traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
           hosts:
             - host: "hass-vscode.${SECRET_DOMAIN}"
               paths:
