将home-assistant的pvc使用的storageclass换成新的

--- a/cluster/apps/home-automation/home-assistant/postgresql-data-pvc.yaml
+++ b/cluster/apps/home-automation/home-assistant/postgresql-data-pvc.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 50Gi
-  storageClassName: ceph-block-ssd-r3
+  storageClassName: ceph-block-application
