--- a/cluster/apps/home-automation/home-assistant/config-pvc.yaml
+++ b/cluster/apps/home-automation/home-assistant/config-pvc.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: ceph-block-ssd-r3
+  storageClassName: ceph-block-application
