修复hass的vscode无法签发证书的问题

--- a/cluster/apps/home-automation/home-assistant/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/helm-release.yaml
@@ -72,6 +72,7 @@ spec:
           tls:
             - hosts:
                 - "hass-vscode.${SECRET_DOMAIN}"
+              secretName: hass-vscode-tls
         volumeMounts:
           - name: config
             mountPath: /config
