--- a/cluster/apps/monitoring/librespeed/helm-release.yaml
+++ b/cluster/apps/monitoring/librespeed/helm-release.yaml
@@ -28,8 +28,10 @@ spec:
               - path: /
                 pathType: Prefix
         annotations:
-          kubernetes.io/ingress.class: traefik
+          kubernetes.io/ingress.class: "traefik"
           kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: "letsencrypt-dns"
+          traefik.ingress.kubernetes.io/router.middlewares: "kube-system-rfc1918@kubernetescrd"
         tls:
           - hosts:
               - "speedtest.${SECRET_DOMAIN}"
