--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 #  - entertainment
 #  - file-service
   - home-automation
-#  - monitoring
+  - monitoring
 #  - others
 #  - programming
 #  - virtual-machine
