调整gitlab的minio pvc大小到100G

--- a/cluster/apps/programming/gitlab/helm-release.yaml
+++ b/cluster/apps/programming/gitlab/helm-release.yaml
@@ -31,6 +31,8 @@ spec:
       ingress:
         tls:
           secretName: RELEASE-minio-tls
+      persistence:
+        size: 100Gi
 
     global:
       hosts:
