--- a/cluster/core/kasten/policies/file.yaml
+++ b/cluster/core/kasten/policies/file.yaml
@@ -12,18 +12,16 @@ spec:
         values:
           - file-service
 
-  frequency: "@weekly"  # 每星期启动一次备份
+  frequency: "@daily"  # 每星期启动一次备份
   subFrequency:
     minutes:
       - 0
     hours:
       - 20  # UTC时间，加八个小时后是凌晨4点，会在这个时间点启动
-    weekdays:
-      - 0
-    months:
-      - 1
   retention: # 保留的备份数量
-    weekly: 2
+    daily: 7
+    weekly: 4
+    monthly: 1
   actions:
     - action: backup  # 使用快照进行备份
       backupParameters:
@@ -40,4 +38,4 @@ spec:
         exportData: # 导出完整备份
           enabled: true
       retention: # 保留的备份数量
-        weekly: 2
+        weekly: 1
