调整bitwarden的pvc storageClass为修改后的，并增加存储空间

--- a/cluster/apps/others/bitwarden/config-pvc.yaml
+++ b/cluster/apps/others/bitwarden/config-pvc.yaml
@@ -9,5 +9,5 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
-  storageClassName: ceph-block-ssd-r2
+      storage: 50Gi
+  storageClassName: ceph-block-application
