--- a/cluster/apps/file-service/pvcs/kustomization.yaml
+++ b/cluster/apps/file-service/pvcs/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - camera-files.yaml
+  - music-files.yaml
   - recording-files.yaml
   - unraid-tmp.yaml
