恢复文件服务的PVC和samba安装

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   #  - 3d-print
   - cluster-manage
 #  - entertainment
-#  - file-service
+  - file-service
   - home-automation
   - monitoring
   - others
