将gitlab的sidekiq副本数降至1

--- a/cluster/apps/programming/gitlab/helm-release.yaml
+++ b/cluster/apps/programming/gitlab/helm-release.yaml
@@ -21,6 +21,8 @@ spec:
         ingress:
           tls:
             secretName: gitlab-webservice-tls
+      sidekiq:
+        minReplicas: 1
 
     registry:
       ingress:
