给resilio-sync添加一个host path用来方便迁移外部文件到pvc

--- a/cluster/apps/file-service/resilio-sync/helm-release.yaml
+++ b/cluster/apps/file-service/resilio-sync/helm-release.yaml
@@ -65,3 +65,9 @@ spec:
         type: pvc
         existingClaim: screenshot-files
         mountPath: /sync/screenshot
+
+      outside-temp-files:
+        enabled: true
+        type: hostPath
+        hostPath: /mnt/temps
+        mountPath: /sync/temps
