添加自动备份bitwarden

--- a/cluster/core/kasten/policies/application.yaml
+++ b/cluster/core/kasten/policies/application.yaml
@@ -14,6 +14,7 @@ spec:
           - home-automation
           - gitlab
           - sentry
+          - bitwarden
 
   frequency: "@daily"  # 每天启动一次备份
   subFrequency:
