--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - metrics-server-charts.yaml
   - traefik-charts.yaml
   - rook-ceph-charts.yaml
+  - prometheus-community-charts.yaml
   - rancher-charts.yaml
   - sentry-charts.yaml
   - gitlab-charts.yaml
