--- a/cluster/core/kube-system/traefik/helm-release.yaml
+++ b/cluster/core/kube-system/traefik/helm-release.yaml
@@ -18,6 +18,9 @@ spec:
   values:
     deployment:
       kind: DaemonSet
+    ingressClass:
+      enabled: true
+      isDefaultClass: true
     logs:
       general:
         level: ERROR
