移除rancher的命名空间

--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - 3d-print.yaml
   - bitwarden.yaml
-  - cattle-system.yaml
+#  - cattle-system.yaml
   - cert-manager.yaml
   - entertainment.yaml
   - file-service.yaml
